🐛 Fix: z-index 수정

--- a/app/(home)/css/Card.module.css
+++ b/app/(home)/css/Card.module.css
@@ -1,5 +1,4 @@
 .card {
-  z-index: -1;
   display: flex;
   background-color: #ffffff;
   flex-flow: column nowrap;
