--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -7,6 +7,7 @@
   padding: 12px 50px;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6px);
+  z-index: 3;
 }
 
 .header::before {
