--- a/components/UserInfo.module.css
+++ b/components/UserInfo.module.css
@@ -45,7 +45,6 @@
   position: absolute;
   top: 45px;
   right: 0;
-  z-index: 1;
 }
 
 .user_menu hr {
